@startuml

title __CHART's Class Diagram__\n

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace ui.chart {
        class com.zaozhuang.newborn.ui.chart.ChartActivity {
            ~ chartIndex : int
            ~ mBackView : View
            ~ mTitleView : TextView
            ~ mViewPager : ViewPager
            ~ magicIndicator : MagicIndicator
            - mChannelList : ArrayList<String>
            - mFragmentList : List<Fragment>
            - tabIndicatorColor : int
            - tabIndicatorHeight : int
            - tabIndicatorWidth : int
            - tabTextDefaultColor : int
            - tabTextSelectColor : int
            # clear()
            # getLayoutId()
            # getTag()
            # initListener()
            # initView()
            # isFullScreen()
            # onResume()
            - initChannel()
            - initMagicIndicator()
            - initViewPager()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace ui.chart {
        class com.zaozhuang.newborn.ui.chart.ChartFragment {
            - index : int
            - lineChart : LineChart
            {static} + newInstance()
            # clear()
            # getFragmentTag()
            # getLayoutId()
            # initListener()
            # initView()
            - setData0()
            - setData1()
            - setData2()
        }
      }
    }
  }
  

  com.zaozhuang.newborn.ui.chart.ChartActivity -up-|> com.zaozhuang.newborn.ui.base.BaseActivity
  com.zaozhuang.newborn.ui.chart.ChartFragment -up-|> com.zaozhuang.newborn.ui.base.BaseFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
